layout issue (margin)

--- a/eclihand/webapp/src/main/webapp/VAADIN/themes/eclihand/eclihand.scss
+++ b/eclihand/webapp/src/main/webapp/VAADIN/themes/eclihand/eclihand.scss
@@ -1,8 +1,5 @@
-@import "../chameleon/chameleon.scss";
+@import "../reindeer/reindeer.scss";
 
 @mixin eclihand {
-  @include chameleon;
-  div {
-		border:dashed;
-	}
+  	@include reindeer;
 }
